--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -163,7 +163,7 @@ jobs:
           pipenv install
       - name: Calculate version
         run: |
-          git fetch --tags
+          git fetch --tags --force
           latest_tag="$(git describe --tags "$(git rev-list --tags --max-count=1)")"
           echo "latest tag: $latest_tag"
           if [[ -z "${{ inputs.versionBump }}" ]]
