--- a/tests/ansible/checks/graph_checks/resources/PanosPolicyNoDSRI/expected.yaml
+++ b/tests/ansible/checks/graph_checks/resources/PanosPolicyNoDSRI/expected.yaml
@@ -3,3 +3,5 @@ pass:
   - "tasks.paloaltonetworks.panos.panos_security_rule.Security_rule_pass_2"
 fail:
   - "tasks.paloaltonetworks.panos.panos_security_rule.Security_rule_fail_1"
+evaluated_keys:
+  - "disable_server_response_inspection"
