Add crypto js symmetric checks

--- a/checkov/sast/checks/javascript/SymmetricEncryption.yaml
+++ b/checkov/sast/checks/javascript/SymmetricEncryption.yaml
@@ -21,5 +21,11 @@ definition:
           variable: "$ENCRYPTION"
           operator: "regex_match"
           value: "('DES|'3DES)"
+      - cond_type: pattern
+        operator: equals
+        value: CryptoJS.DES.encrypt(...)
+      - cond_type: pattern
+        operator: equals
+        value: CryptoJS.TripleDES.encrypt(...)
 
 
