--- a/checkov/sast/checks/javascript/EncryptionKeySize.yaml
+++ b/checkov/sast/checks/javascript/EncryptionKeySize.yaml
@@ -1,7 +1,6 @@
 metadata:
   id: CKV3_SAST_23
-  name: Ensure that encryption keys are of size 2048 or higher
-  guidelines: Detected an insufficient key size for DSA. NIST recommends a key size of 2048 or higher.
+  name: Ensure that encryption keys are of size 16 bytes or higher
   category: sast
   cwe: "CWE-326: Inadequate Encryption Strength"
 scope:
@@ -21,6 +20,18 @@ definition:
           $PACKAGE = require('node-forge');
           ...
           $PACKAGE.random.getBytesSync($KEY_SIZE);
+      - cond_type: pattern
+        operator: equals
+        value: "cryptoRandomString({..., length: $KEY_SIZE, ...}, ...);"
+      - cond_type: pattern
+        operator: equals
+        value: "cryptoRandomStringAsync({..., length: $KEY_SIZE, ...}, ...);"
+      - cond_type: pattern
+        operator: equals
+        value: |
+          $RAND = new brorand.Rand(...);
+          ...
+          $RAND.generate($KEY_SIZE)
   - cond_type: variable
     variable: $KEY_SIZE
     operator: less_than
