--- a/checkov/terraform/checks/graph_checks/azure/AzureAKSclusterAzureCNIEnabled.yaml
+++ b/checkov/terraform/checks/graph_checks/azure/AzureAKSclusterAzureCNIEnabled.yaml
@@ -4,17 +4,10 @@ metadata:
   category: "GENERAL_SECURITY"
 
 definition:
-  and:
-
-    - cond_type: "attribute"
-      resource_types: "azurerm_kubernetes_cluster"
-      attribute: "network_profile.network_plugin"
-      operator: "exists"
-
-    - cond_type: "attribute"
-      resource_types: "azurerm_kubernetes_cluster"
-      attribute: "network_profile.network_plugin"
-      operator: "within"
-      value: 
-        - "azure"
-        - "Azure"
+  cond_type: "attribute"
+  resource_types: "azurerm_kubernetes_cluster"
+  attribute: "network_profile.network_plugin"
+  operator: "within"
+  value: 
+    - "azure"
+    - "Azure"
