--- a/tests/ansible/checks/graph_checks/resources/PanosPolicyNoApplicationAny/pass.yaml
+++ b/tests/ansible/checks/graph_checks/resources/PanosPolicyNoApplicationAny/pass.yaml
@@ -19,11 +19,10 @@
         source_zone: ['any']
         destination_zone: ['any']
         category: ['any']
-        application: ['ssl']
-        service: ['service-http', 'service-https']
-        disable_server_response_inspection: false
+        application: ['ssl'] # Single application provided
+        service: ['service-https']
+        description: "A nice rule"
         action: 'allow'
-        description: 'The description'
 
     - name: Security_rule_pass_2
       paloaltonetworks.panos.panos_security_rule:
@@ -32,8 +31,7 @@
         source_zone: ['any']
         destination_zone: ['any']
         category: ['any']
-        application: ['ssl']
-        service: ['service-http', 'service-https']
+        application: ['web-browsing', 'ssl'] # Multiple applications provided
+        service: ['service-https']
+        description: "A nice rule"
         action: 'allow'
-        description: 'The description'
-        # No explicit disable_server_response_inspection parameter, therefore uses default: false, which passes the check
