--- a/tests/ansible/checks/graph_checks/resources/PanosPolicyDescription/pass.yaml
+++ b/tests/ansible/checks/graph_checks/resources/PanosPolicyDescription/pass.yaml
@@ -21,19 +21,5 @@
         category: ['any']
         application: ['ssl']
         service: ['service-http', 'service-https']
-        disable_server_response_inspection: false
+        description: "A nice rule" # Description provided
         action: 'allow'
-        description: 'The description'
-
-    - name: Security_rule_pass_2
-      paloaltonetworks.panos.panos_security_rule:
-        provider: '{{ provider }}'
-        rule_name: 'Test rule'
-        source_zone: ['any']
-        destination_zone: ['any']
-        category: ['any']
-        application: ['ssl']
-        service: ['service-http', 'service-https']
-        action: 'allow'
-        description: 'The description'
-        # No explicit disable_server_response_inspection parameter, therefore uses default: false, which passes the check
