--- a/tests/ansible/checks/graph_checks/resources/PanosPolicyNoServiceAny/pass.yaml
+++ b/tests/ansible/checks/graph_checks/resources/PanosPolicyNoServiceAny/pass.yaml
@@ -20,10 +20,9 @@
         destination_zone: ['any']
         category: ['any']
         application: ['ssl']
-        service: ['service-http', 'service-https']
-        disable_server_response_inspection: false
+        service: ['service-https'] # Single service provided
+        description: "A nice rule"
         action: 'allow'
-        description: 'The description'
 
     - name: Security_rule_pass_2
       paloaltonetworks.panos.panos_security_rule:
@@ -33,7 +32,6 @@
         destination_zone: ['any']
         category: ['any']
         application: ['ssl']
-        service: ['service-http', 'service-https']
+        service: ['service-http', 'service-https'] # Multiple services provided
+        description: "A nice rule"
         action: 'allow'
-        description: 'The description'
-        # No explicit disable_server_response_inspection parameter, therefore uses default: false, which passes the check
