--- a/checkov/terraform/checks/graph_checks/aws/S3BucketLifecycle.yaml
+++ b/checkov/terraform/checks/graph_checks/aws/S3BucketLifecycle.yaml
@@ -1,6 +1,6 @@
 metadata:
   name: "Ensure that an S3 bucket has a lifecycle configuration"
-  category: "GENERAL"
+  category: "LOGGING"
   id: "CKV2_AWS_61"
 definition:
     and:
