Support provider.{provider_type} for resource_types attribute in checks

--- a/tests/terraform/runner/extra_yaml_checks/policy_violations.yaml
+++ b/tests/terraform/runner/extra_yaml_checks/policy_violations.yaml
@@ -8,12 +8,12 @@ definition:
   and:
   - cond_type: "attribute"
     resource_types:
-      - "provider.aws"
+      - "provider"
     attribute: "default_tags"
     operator: exists
   - cond_type: "attribute"
     resource_types:
-      - "provider.aws"
+      - "provider"
     attribute: "region"
     operator: "not_contains"
     value: "us-west-1"
