--- a/Pipfile
+++ b/Pipfile
@@ -50,7 +50,7 @@ tabulate = "*"
 colorama="*"
 termcolor="*"
 junit-xml = ">=1.9"
-dpath = ">=1.5.0,<2"
+dpath = ">=2.1.0"
 pyyaml = ">=5.4.1"
 boto3 = ">=1.17"
 gitpython = "*"
